--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.14.2",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-bouncy-checkbox": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
